[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-options-gym"
version = "0.1.0"
description = "Gymnasium-compatible RL environments for real estate option trading with stochastic interest rates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Brandon Pennington", email = "brand.pennington@imperial.ac.uk"}
]
keywords = [
    "reinforcement-learning",
    "real-estate",
    "options",
    "quantitative-finance",
    "gymnasium",
    "simulation",
    "stochastic-processes"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
data = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]
rl = [
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
]
all = [
    "realestate-options-gym[dev,data,rl]",
]

[project.urls]
Homepage = "https://github.com/BrandPennington/realestate-options-gym"
Documentation = "https://github.com/BrandPennington/realestate-options-gym#readme"
Repository = "https://github.com/BrandPennington/realestate-options-gym.git"
Issues = "https://github.com/BrandPennington/realestate-options-gym/issues"

[project.entry-points."gymnasium.envs"]
__root__ = "realestate_options_gym:register_envs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
realestate_options_gym = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=realestate_options_gym --cov-report=term-missing"

[tool.coverage.run]
source = ["src/realestate_options_gym"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
